--- a/generator/generator.cabal
+++ b/generator/generator.cabal
@@ -17,6 +17,11 @@ source-repository head
   location: https://github.com/glcanvas/log-dashboard
 
 library
+  exposed-modules:
+      Generator.Runner
+      Generator.Services.Login
+      Generator.Services.Page
+      Generator.Setup
   other-modules:
       Paths_generator
   hs-source-dirs:
@@ -46,6 +51,7 @@ library
       MultiWayIf
       NamedFieldPuns
       NegativeLiterals
+      NoImplicitPrelude
       NoStarIsType
       NumDecimals
       OverloadedLabels
@@ -69,8 +75,16 @@ library
       ViewPatterns
   ghc-options: -Weverything -Wno-missing-exported-signatures -Wno-missing-import-lists -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-unsafe -Wno-safe -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-implicit-prelude
   build-depends:
-      base
+      async
+    , base
+    , lens
+    , random
+    , rio
+    , say
+    , stm
+    , stm-containers
     , universum
+    , unliftio-core
   if impl(ghc >= 8.10.0)
     ghc-options: -Wno-prepositive-qualified-module -Wno-inferred-safe-imports -Wno-missing-safe-haskell-mode
   default-language: Haskell2010
@@ -106,6 +120,7 @@ executable generator
       MultiWayIf
       NamedFieldPuns
       NegativeLiterals
+      NoImplicitPrelude
       NoStarIsType
       NumDecimals
       OverloadedLabels
@@ -127,9 +142,11 @@ executable generator
       UndecidableInstances
       UndecidableSuperClasses
       ViewPatterns
-  ghc-options: -Weverything -Wno-missing-exported-signatures -Wno-missing-import-lists -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-unsafe -Wno-safe -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-implicit-prelude
+  ghc-options: -Weverything -Wno-missing-exported-signatures -Wno-missing-import-lists -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-unsafe -Wno-safe -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-implicit-prelude -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base
+    , generator
+    , rio-orphans
     , universum
   if impl(ghc >= 8.10.0)
     ghc-options: -Wno-prepositive-qualified-module -Wno-inferred-safe-imports -Wno-missing-safe-haskell-mode
