--- a/generator/generator.cabal
+++ b/generator/generator.cabal
@@ -19,12 +19,13 @@ source-repository head
 library
   exposed-modules:
       Generator.Data.Base
+      Generator.Data.Catalog
       Generator.Data.Common
       Generator.Data.Login
       Generator.Data.Util
       Generator.Runner
+      Generator.Services.Catalog
       Generator.Services.Login
-      Generator.Services.Page
       Generator.Setup
   other-modules:
       Paths_generator
