--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -10,9 +10,25 @@ env:
   IMAGE_NAME: generator
 
 jobs:
+  create-release:
+    runs-on: ubuntu-latest
+    steps:
+      - id: create-release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+      - run: |
+          echo "${{ steps.create-release.outputs.upload_url }}" > release_url.txt
+      - uses: actions/upload-artifact@v2.2.4
+        with:
+          name: release_url
+          path: release_url.txt
   build:
     name: build
     runs-on: ubuntu-latest
+    needs: create-release
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -24,8 +40,6 @@ jobs:
       - uses: actions/setup-haskell@v1.1
         with:
           enable-stack: true
-          ghc-version: '8.10.7' # Resolves to the latest point release of GHC 8.10.7
-          stack-version: 'latest'
       - name: Cache stack
         uses: actions/cache@v2
         env:
