--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     image: confluentinc/cp-kafka
     ports:
       - 9094:9094
+      - 9092
     depends_on:
       - zookeeper
     environment:
@@ -26,8 +27,19 @@ services:
     ports:
       - "8080:8080"
     restart: always
+    stdin_open: false
+    tty: false
     environment:
       - KAFKA_CLUSTERS_0_NAME=local
       - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
       - KAFKA_CLUSTERS_0_ZOOKEEPER=localhost:2181
       - KAFKA_CLUSTERS_0_READONLY=true
+  generator:
+    image: klntsky/generator:1.0
+    stdin_open: true
+    tty: true
+    depends_on:
+      - kafka
+    network_mode: host
+    environment:
+      KAFKA_BROKER: localhost:9094
