Add config, fix bugs

--- a/generator/package.yaml
+++ b/generator/package.yaml
@@ -82,6 +82,9 @@ library:
     - hedgehog
     - hw-kafka-client
     - lens
+    - loot-config
+    - optparse-applicative
+    - parser-combinators
     - random
     - rio
     - say
@@ -91,6 +94,8 @@ library:
     - text
     - time
     - unliftio-core
+    - unordered-containers
+    - yaml
 
 executables:
   generator:
@@ -102,4 +107,5 @@ executables:
       - -with-rtsopts=-N
     dependencies:
       - generator
+      - optparse-applicative
       - rio-orphans
