--- a/generator/generator.cabal
+++ b/generator/generator.cabal
@@ -18,6 +18,8 @@ source-repository head
 
 library
   exposed-modules:
+      Generator.Config.Def
+      Generator.Config.Reading
       Generator.Data.Base
       Generator.Data.Catalog
       Generator.Data.Common
@@ -87,6 +89,9 @@ library
     , hedgehog
     , hw-kafka-client
     , lens
+    , loot-config
+    , optparse-applicative
+    , parser-combinators
     , random
     , rio
     , say
@@ -97,6 +102,8 @@ library
     , time
     , universum
     , unliftio-core
+    , unordered-containers
+    , yaml
   if impl(ghc >= 8.10.0)
     ghc-options: -Wno-prepositive-qualified-module -Wno-inferred-safe-imports -Wno-missing-safe-haskell-mode
   default-language: Haskell2010
@@ -158,6 +165,7 @@ executable generator
   build-depends:
       base
     , generator
+    , optparse-applicative
     , rio-orphans
     , universum
   if impl(ghc >= 8.10.0)
