--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,11 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_SYNC_LIMIT: 2
+    networks:
+      default:
+        {}
+      clickhouse-network:
+        ipv4_address: 172.23.0.8
   kafka:
     image: confluentinc/cp-kafka
     ports:
