Add Card service

--- a/generator/generator.cabal
+++ b/generator/generator.cabal
@@ -21,12 +21,14 @@ library
       Generator.Config.Def
       Generator.Config.Reading
       Generator.Data.Base
+      Generator.Data.Card
       Generator.Data.Catalog
       Generator.Data.Common
       Generator.Data.Login
       Generator.Data.Util
       Generator.Kafka
       Generator.Runner
+      Generator.Services.Card
       Generator.Services.Catalog
       Generator.Services.Login
       Generator.Setup
