Add Order and Payment services

--- a/generator/generator.cabal
+++ b/generator/generator.cabal
@@ -25,12 +25,16 @@ library
       Generator.Data.Catalog
       Generator.Data.Common
       Generator.Data.Login
+      Generator.Data.Order
+      Generator.Data.Payment
       Generator.Data.Util
       Generator.Kafka
       Generator.Runner
       Generator.Services.Card
       Generator.Services.Catalog
       Generator.Services.Login
+      Generator.Services.Order
+      Generator.Services.Payment
       Generator.Setup
   other-modules:
       Paths_generator
