--- a/spark_processor/Dockerfile
+++ b/spark_processor/Dockerfile
@@ -9,5 +9,5 @@ RUN python3.7 -m pip install pyspark==2.4.4
 RUN python3.7 -m pip install findspark
 COPY ./launcher.sh ./launcher.sh
 COPY ./main.py ./main.py
-#ENTRYPOINT ["/bin/sh"]
-#CMD ["/opt/bitnami/spark/launcher.sh"]
+ENTRYPOINT ["/bin/sh"]
+CMD ["/opt/bitnami/spark/launcher.sh"]
