--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_SYNC_LIMIT: 2
+    tmpfs: "/datalog"
     networks:
       default:
         {}
@@ -39,94 +40,44 @@ services:
       - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
       - KAFKA_CLUSTERS_0_ZOOKEEPER=localhost:2181
       - KAFKA_CLUSTERS_0_READONLY=true
-  clickhouse01:
-    image: yandex/clickhouse-server
-    networks:
-      clickhouse-network:
-        ipv4_address: 172.23.0.11
-    # ports:
-    #   - "8123:8123"
-    #   - "9000:9000"
-#      - "9009:9009"
-    ulimits:
-      nproc: 65535
-    depends_on:
-      - zookeeper
-    volumes:
-      - ./clickhouse01:/etc/clickhouse-server
+  spark:
+    image: docker.io/bitnami/spark:3
     environment:
-      KAFKA_BROKER: "kafka:9092"
-  clickhouse02:
-    image: yandex/clickhouse-server
-    networks:
-      clickhouse-network:
-        ipv4_address: 172.23.0.12
-    # ports:
-    #   - "8123:8123"
-    #   - "9000:9000"
-#      - "9009:9009"
-    ulimits:
-      nproc: 65535
-    depends_on:
-      - zookeeper
-    volumes:
-      - ./clickhouse02:/etc/clickhouse-server
+      - SPARK_MODE=master
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+    ports:
+      - '18080:8080'
+  spark-worker_1:
+    image: docker.io/bitnami/spark:3
     environment:
-      KAFKA_BROKER: "kafka:9092"
-  clickhouse03:
-    image: yandex/clickhouse-server
-    networks:
-      clickhouse-network:
-        ipv4_address: 172.23.0.13
-    # ports:
-    #   - "8123:8123"
-    #   - "9000:9000"
-#      - "9009:9009"
-    ulimits:
-      nproc: 65535
-    depends_on:
-      - zookeeper
-    volumes:
-      - ./clickhouse03:/etc/clickhouse-server
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark:7077
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_CORES=1
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+  spark-worker_2:
+    image: docker.io/bitnami/spark:3
     environment:
-      KAFKA_BROKER: "kafka:9092"
-  clickhouse04:
-    image: yandex/clickhouse-server
-    networks:
-      clickhouse-network:
-        ipv4_address: 172.23.0.14
-    # ports:
-    #   - "8123:8123"
-    #   - "9000:9000"
-#      - "9009:9009"
-    ulimits:
-      nproc: 65535
-    depends_on:
-      - zookeeper
-    volumes:
-      - ./clickhouse04:/etc/clickhouse-server
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark:7077
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_CORES=1
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+  spark-processor:
+    image: nduginets/log-pyspark:1.0
+    depends_on: [spark, kafka]
     environment:
-      KAFKA_BROKER: "kafka:9092"
-  clickhouse-client:
-    image: yandex/clickhouse-client
-    depends_on:
-      - "clickhouse01"
-    command: ['--host', 'clickhouse01' ]
-    networks:
-      clickhouse-network:
-        ipv4_address: 172.23.0.9
-    environment:
-      KAFKA_BROKER: "kafka:9092"
-  generator:
-    image: klntsky/generator:1.0
-    stdin_open: true
-    tty: true
-    depends_on:
-      - kafka
-    network_mode: host
-    environment:
-      KAFKA_BROKER: "localhost:9094"
-
+      - ZOOKEEPER_PATH=zookeeper:2181
+      - SPARK_PATH=spark://spark:7077
 networks:
   clickhouse-network:
     ipam:
