--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,13 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_SYNC_LIMIT: 2
-    tmpfs: "/datalog"
     networks:
       default:
-        {}
+        { }
       clickhouse-network:
         ipv4_address: 172.23.0.8
   kafka:
-    image: confluentinc/cp-kafka
+    image: wurstmeister/kafka
     ports:
       - 9094:9094
       - 9092:9092
@@ -27,6 +26,10 @@ services:
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,OUTSIDE://localhost:9094
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_CREATE_TOPICS: "gen-logs:1:1"
+    networks:
+      clickhouse-network:
+        ipv4_address: 172.23.0.5
   kafka-ui:
     image: provectuslabs/kafka-ui
     container_name: kafka-ui
@@ -39,7 +42,109 @@ services:
       - KAFKA_CLUSTERS_0_NAME=local
       - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
       - KAFKA_CLUSTERS_0_ZOOKEEPER=localhost:2181
-      - KAFKA_CLUSTERS_0_READONLY=true
+      # - KAFKA_CLUSTERS_0_READONLY=true
+    networks:
+      clickhouse-network:
+        ipv4_address: 172.23.0.6
+  clickhouse01:
+    image: yandex/clickhouse-server
+    # links:
+    #   - kafka
+    networks:
+      clickhouse-network:
+        ipv4_address: 172.23.0.11
+    # ports:
+    #   - "8123:8123"
+    #   - "9000:9000"
+    #      - "9009:9009"
+    ulimits:
+      nproc: 65535
+    depends_on:
+      - zookeeper
+      - kafka
+    volumes:
+      - ./clickhouse01:/etc/clickhouse-server
+    environment:
+      KAFKA_BROKER: "kafka:9092"
+  clickhouse02:
+    image: yandex/clickhouse-server
+    # links:
+    #   - kafka
+    networks:
+      clickhouse-network:
+        ipv4_address: 172.23.0.12
+    # ports:
+    #   - "8123:8123"
+    #   - "9000:9000"
+    #      - "9009:9009"
+    ulimits:
+      nproc: 65535
+    depends_on:
+      - zookeeper
+      - kafka
+    volumes:
+      - ./clickhouse02:/etc/clickhouse-server
+    environment:
+      KAFKA_BROKER: "kafka:9092"
+  clickhouse03:
+    image: yandex/clickhouse-server
+    # links:
+    #   - kafka
+    networks:
+      clickhouse-network:
+        ipv4_address: 172.23.0.13
+    # ports:
+    #   - "8123:8123"
+    #   - "9000:9000"
+    #      - "9009:9009"
+    ulimits:
+      nproc: 65535
+    depends_on:
+      - zookeeper
+      - kafka
+    volumes:
+      - ./clickhouse03:/etc/clickhouse-server
+    environment:
+      KAFKA_BROKER: "kafka:9092"
+  clickhouse04:
+    image: yandex/clickhouse-server
+    links:
+      - kafka
+    networks:
+      clickhouse-network:
+        ipv4_address: 172.23.0.14
+    # ports:
+    #   - "8123:8123"
+    #   - "9000:9000"
+    #      - "9009:9009"
+    ulimits:
+      nproc: 65535
+    depends_on:
+      - zookeeper
+      - kafka
+    volumes:
+      - ./clickhouse04:/etc/clickhouse-server
+    environment:
+      KAFKA_BROKER: "kafka:9092"
+  clickhouse-client:
+    image: yandex/clickhouse-client
+    depends_on:
+      - "clickhouse01"
+    command: [ '--host', 'clickhouse01' ]
+    networks:
+      clickhouse-network:
+        ipv4_address: 172.23.0.9
+    environment:
+      KAFKA_BROKER: "kafka:9092"
+  generator:
+    image: klntsky/generator:1.0
+    stdin_open: true
+    tty: true
+    depends_on:
+      - kafka
+    network_mode: host
+    environment:
+      KAFKA_BROKER: "localhost:9094"
   spark:
     image: docker.io/bitnami/spark:3
     environment:
@@ -86,10 +191,11 @@ services:
       - SPARK_SSL_ENABLED=no
   spark-processor:
     image: nduginets/log-pyspark:1.0
-    depends_on: [spark, kafka]
+    depends_on: [ spark, kafka ]
     environment:
       - ZOOKEEPER_PATH=zookeeper:2181
       - SPARK_PATH=spark://spark:7077
+
 networks:
   clickhouse-network:
     ipam:
