--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       ZOOKEEPER_SYNC_LIMIT: 2
     networks:
       default:
-        {}
+        { }
       clickhouse-network:
         ipv4_address: 172.23.0.8
   kafka:
@@ -47,7 +47,7 @@ services:
     # ports:
     #   - "8123:8123"
     #   - "9000:9000"
-#      - "9009:9009"
+    #      - "9009:9009"
     ulimits:
       nproc: 65535
     depends_on:
@@ -64,7 +64,7 @@ services:
     # ports:
     #   - "8123:8123"
     #   - "9000:9000"
-#      - "9009:9009"
+    #      - "9009:9009"
     ulimits:
       nproc: 65535
     depends_on:
@@ -81,7 +81,7 @@ services:
     # ports:
     #   - "8123:8123"
     #   - "9000:9000"
-#      - "9009:9009"
+    #      - "9009:9009"
     ulimits:
       nproc: 65535
     depends_on:
@@ -98,7 +98,7 @@ services:
     # ports:
     #   - "8123:8123"
     #   - "9000:9000"
-#      - "9009:9009"
+    #      - "9009:9009"
     ulimits:
       nproc: 65535
     depends_on:
@@ -111,7 +111,7 @@ services:
     image: yandex/clickhouse-client
     depends_on:
       - "clickhouse01"
-    command: ['--host', 'clickhouse01' ]
+    command: [ '--host', 'clickhouse01' ]
     networks:
       clickhouse-network:
         ipv4_address: 172.23.0.9
@@ -126,6 +126,12 @@ services:
     network_mode: host
     environment:
       KAFKA_BROKER: "localhost:9094"
+  grafana:
+    image: grafana/grafana:8.3.3
+    ports:
+      - 3000:3000
+    environment:
+      GF_INSTALL_PLUGINS: vertamedia-clickhouse-datasource,grafana-worldmap-panel
 
 networks:
   clickhouse-network:
