--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,OUTSIDE://localhost:9094
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_CREATE_TOPICS: "gen-logs:1:1"
+      KAFKA_CREATE_TOPICS: "gen-logs:1:1,online_user:1:1"
     networks:
       clickhouse-network:
         ipv4_address: 172.23.0.5
@@ -129,8 +129,12 @@ services:
   clickhouse-client:
     image: yandex/clickhouse-client
     depends_on:
-      - "clickhouse01"
-    command: ['--host', 'clickhouse01' ]
+      - clickhouse01
+      - pyspark
+      - zookeeper
+    volumes:
+      - ./db:/db
+    entrypoint: /bin/bash /db/go.sh
     networks:
       clickhouse-network:
         ipv4_address: 172.23.0.9
@@ -148,6 +152,21 @@ services:
     # networks:
     #   clickhouse-network:
     #     ipv4_address: 172.23.0.50
+
+  pyspark:
+    image: klntsky/spark-env:1.0 # jupyter/pyspark-notebook:latest
+    hostname: pyspark
+    container_name: pyspark
+    ports:
+      - 8888:8888
+      - 4040:4040
+    networks:
+      clickhouse-network:
+        ipv4_address: 172.23.0.7
+    #volumes:
+    #  - pySpark: pySpark/
+    # depends_on:
+    #   - zookeeper
 
 networks:
   clickhouse-network:
