--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,OUTSIDE://localhost:9094
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_CREATE_TOPICS: "gen-logs:1:1,online_user:1:1"
+      KAFKA_CREATE_TOPICS: "gen-logs:1:1,online_user:1:1,users_spend_time_online:1:1,failed_login:1:1,request_trace:1:1,user_trace:1:1"
     networks:
       clickhouse-network:
         ipv4_address: 172.23.0.5
